@@ -1,5 +1,7 @@
 *SVN*
 
+* Add ActiveRecord::Errors#to_xml [Jamis Buck]
+
 * Properly quote index names in migrations (closes #4764) [John Long]
 
 * Fix the HasManyAssociation#count method so it uses the new ActiveRecord::Base#count syntax, while maintaining backwards compatibility.  [Rick]
